--- a/Markdown2Video/.htaccess
+++ b/Markdown2Video/.htaccess
@@ -1,26 +1,26 @@
 # Activar el motor de reescritura
 RewriteEngine On
 
-# Establecer la base de reescritura si tu proyecto está en un subdirectorio
-RewriteBase /markdown2video/
+# Eliminar RewriteBase si estás en la raíz del dominio
+# RewriteBase /
 
 # Opcional: Evitar listado de directorios
 Options -Indexes
 
 # 1. Bloquear acceso a directorios sensibles
-RewriteRule ^(src|Views|vendor)/ - [F,L] # Asegúrate que estos directorios están en la raíz de /markdown2video/
+RewriteRule ^(src|Views|vendor)/ - [F,L]
 
-# 2. Bloquear acceso directo a archivos .php excepto index.php <--- SECCIÓN CORREGIDA
-RewriteCond %{REQUEST_URI} !^/markdown2video/index\.php$
+# 2. Bloquear acceso directo a archivos .php excepto index.php
+RewriteCond %{REQUEST_URI} !^/index\.php$
 RewriteCond %{REQUEST_URI} \.php$ [NC]
 RewriteRule .* - [F,L]
 
-# 3. Reglas para el Front Controller (como ya tenías)
+# 3. Reglas para el Front Controller
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
 
-# Proteger archivos sensibles (como ya tenías)
+# Proteger archivos sensibles
 <FilesMatch "^\.">
     Order allow,deny
     Deny from all
