--- a/Markdown2Video/.ebextensions/apache.config
+++ b/Markdown2Video/.ebextensions/apache.config
@@ -1,5 +1,5 @@
 files:
-  "/etc/httpd/conf.d/00_htaccess.conf":
+  "/etc/httpd/conf.d/00_custom.conf":
     mode: "000644"
     owner: root
     group: root
