--- a/.github/workflows/release_version.yml
+++ b/.github/workflows/release_version.yml
@@ -43,7 +43,7 @@ jobs:
       run: |
         cd Markdown2Video  # Asegurarse de estar en la carpeta correcta
         mkdir release
-        zip -r release/project-${GITHUB_SHA}.zip .  # O el tipo de archivo que prefieras como release
+        zip -r release/project-${GITHUB_SHA}.zip . -x "*.git*" -x "*node_modules*" # O el tipo de archivo que prefieras como release
 
     - name: Create Git tag  # Estepaso debe estar alineado correctamente
       run: |
