--- a/Markdown2Video/.ebextensions/custom_rewrites.conf
+++ b/Markdown2Video/.ebextensions/custom_rewrites.conf
@@ -1,16 +1,4 @@
-server {
-    # Evita duplicar listen o server_name (los pone Elastic Beanstalk)
-    # Solo reglas dentro del server
-
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
-    location ~ \.php$ {
-        # Esto normalmente ya está configurado,
-        # pero si necesitas añadir algo, aquí es el lugar
-        include fastcgi_params;
-        fastcgi_pass unix:/var/run/php-fpm.sock;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
+location /prueba-htaccess {
+    return 200 "Prueba de configuración Nginx exitosa\n";
+    add_header Content-Type text/plain;
 }
