--- a/Markdown2Video/.ebextensions/01_apache.config
+++ b/Markdown2Video/.ebextensions/01_apache.config
@@ -1,6 +1,5 @@
-files:
-  "/etc/httpd/conf.d/enable_htaccess.conf":
-    content: |
-      <Directory "/var/www/html">
-        AllowOverride All
-      </Directory>
+# .ebextensions/01_apache.config
+option_settings:
+  - namespace: aws:elasticbeanstalk:environment:proxy
+    option_name: ProxyServer
+    value: apache
