--- a/Markdown2Video/.htaccess
+++ b/Markdown2Video/.htaccess
@@ -11,7 +11,7 @@ Options -Indexes
 RewriteRule ^(src|Views|vendor)/ - [F,L] # Asegúrate que estos directorios están en la raíz de /markdown2video/
 
 # 2. Bloquear acceso directo a archivos .php excepto index.php <--- SECCIÓN CORREGIDA
-RewriteCond %{REQUEST_URI} !^/index\.php$
+RewriteCond %{REQUEST_URI} !^/markdown2video/index\.php$
 RewriteCond %{REQUEST_URI} \.php$ [NC]
 RewriteRule .* - [F,L]
 
