--- a/Markdown2Video/.ebextensions/01-install-node.config
+++ b/Markdown2Video/.ebextensions/01-install-node.config
@@ -1,8 +1,5 @@
-packages:
-  yum:
-    nodejs: []  # Amazon Linux 2 ya lo incluye en los repos
-
 commands:
-  01_symlink_node:
-    command: "ln -s /usr/bin/nodejs /usr/bin/node"
-    ignoreErrors: true
+  01_install_node:
+    command: |
+      curl -sL https://rpm.nodesource.com/setup_20.x | bash -
+      yum install -y nodejs
