--- a/Markdown2Video/.ebextensions/01_nodejs.config
+++ b/Markdown2Video/.ebextensions/01_nodejs.config
@@ -1,10 +1,5 @@
-packages:
-  yum:
-    gcc-c++: []
-    make: []
-
 commands:
-  01_nodejs:
-    command: |
-      curl -fsSL https://rpm.nodesource.com/setup_18.x | bash -
-      yum install -y nodejs
+  01enable_epel:
+    command: sudo amazon-linux-extras install epel
+  02npm_install:
+    command: sudo yum -y --enablerepo=epel install nodejs npm
