--- a/Markdown2Video/.ebextensions/install_node.config
+++ b/Markdown2Video/.ebextensions/install_node.config
@@ -2,5 +2,10 @@
 commands:
   install_node:
     command: |
-      curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
-      apt-get install -y nodejs
+      # 1. Instalar Node.js 18.x desde NodeSource
+      curl -fsSL https://rpm.nodesource.com/setup_18.x | sudo bash -
+      sudo yum install -y nodejs
+
+      # 2. Verificar instalación
+      node --version
+      npm --version
