--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -27,7 +27,7 @@ jobs:
         run: mkdir -p docs/coverage
 
       - name: Ejecutar pruebas con cobertura
-        run: XDEBUG_MODE=coverage phpunit --coverage-html docs/coverage --bootstrap vendor/autoload.php tests
+        run: XDEBUG_MODE=coverage phpunit --coverage-html docs/coverage --bootstrap Markdown2Video/vendor/autoload.php tests
 
       - name: Ejecutar pruebas con cobertura
         run: phpunit --coverage-html docs/coverage tests
