--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -37,5 +37,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: html-report
-          publish_branch: gh-pages          
-          force_orphan: true
+          publish_branch: gh-pages
+          destination_dir: reports/html
