--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           php-version: "8.2"
           coverage: pcov
+    
+      - name: 🔓 Permitir plugin infection/extension-installer
+        run: composer config --no-plugins allow-plugins.infection/extension-installer true
 
       - name: 📦 Instalar dependencias (incluye PHPUnit e Infection)
         working-directory: Markdown2Video
