--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -17,7 +17,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.2"
-          coverage: pcov
+          coverage: xdebug
 
       - name: 🔓 Permitir plugin infection/extension-installer
         working-directory: Markdown2Video
@@ -34,11 +34,11 @@ jobs:
             composer require --dev infection/infection
           fi
 
-      - name: Crear carpeta para el reporte
-        run: mkdir -p docs/coverage
-
-      - name: Ejecutar pruebas con cobertura
-        run: XDEBUG_MODE=coverage phpunit --coverage-html docs/coverage tests
+      - name: 🧪 Ejecutar pruebas con cobertura
+        working-directory: Markdown2Video
+        run: |
+          mkdir -p coverage
+          XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-xml=coverage tests
 
       - name: 🧬 Ejecutar Infection (pruebas de mutación)
         working-directory: Markdown2Video
