--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -38,12 +38,11 @@ jobs:
       - name: 🧪 Ejecutar pruebas con cobertura
         run: |
           mkdir -p coverage
-          XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-xml=coverage tests
+          XDEBUG_MODE=coverage Markdown2Video/vendor/bin/phpunit --coverage-xml=coverage tests
 
       - name: 🧬 Ejecutar Infection (pruebas de mutación)
-        working-directory: Markdown2Video
         run: |
-          vendor/bin/infection --coverage=../coverage --logger-html=infection-report
+          Markdown2Video/vendor/bin/infection --coverage=coverage --logger-html=infection-report
 
       - name: 📤 Subir reporte de mutación como artefacto
         uses: actions/upload-artifact@v4
