--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -42,9 +42,16 @@ jobs:
 
       - name: 🧬 Ejecutar Infection (pruebas de mutación)
         run: |
-          Markdown2Video/vendor/bin/infection --coverage=coverage --logger-html=infection-report \
-            --test-framework=phpunit \
-            --test-framework-options="--phpunit-path=Markdown2Video/vendor/bin/phpunit"
+          # Verificar que phpunit existe
+          ls -la Markdown2Video/vendor/bin/phpunit
+        
+          # Asegurar permisos de ejecución
+          chmod +x Markdown2Video/vendor/bin/phpunit
+
+          Markdown2Video/vendor/bin/infection \
+          --configuration=../infection.json \
+          --coverage=coverage \
+          --verbose
 
       - name: 📤 Subir reporte de mutación como artefacto
         uses: actions/upload-artifact@v4
