--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -39,15 +39,15 @@ jobs:
         run: |
           mkdir -p coverage
           XDEBUG_MODE=coverage Markdown2Video/vendor/bin/phpunit \
-            --coverage-xml=coverage/coverage-xml \
-            --coverage-html=coverage/html \
-            --log-junit=coverage/junit.xml \
-            tests
+          --coverage-xml=coverage/clover.xml \
+          --coverage-html=coverage/html \
+          --log-junit=coverage/junit.xml \
+          tests
 
       - name: 🧬 Ejecutar Infection (pruebas de mutación)
         run: |
-          # Verificar que phpunit existe
-          ls -la Markdown2Video/vendor/bin/phpunit
+          # Verificar que coverage existe
+          ls -la coverage/
         
           # Asegurar permisos de ejecución
           chmod +x Markdown2Video/vendor/bin/phpunit
