--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -39,9 +39,9 @@ jobs:
         run: |
           mkdir -p coverage
           XDEBUG_MODE=coverage Markdown2Video/vendor/bin/phpunit \
-          --coverage-clover=coverage/clover.xml \  # Necesario para Infection
-          --log-junit=coverage/junit.xml \        # Resultados en formato JUnit
-          --coverage-html=coverage/html \         # Opcional: HTML para visualización
+          --coverage-xml=coverage/clover.xml \
+          --coverage-html=coverage/html \
+          --log-junit=coverage/junit.xml \
           tests
 
           # Renombrar junit.xml a index.xml para Infection
