--- a/Markdown2Video/.ebextensions/install_node.config
+++ b/Markdown2Video/.ebextensions/install_node.config
@@ -2,10 +2,5 @@
 commands:
   install_node:
     command: |
-      # 1. Instalar Node.js 18.x desde NodeSource
-      curl -fsSL https://rpm.nodesource.com/setup_18.x | sudo bash -
-      sudo yum install -y nodejs
-
-      # 2. Verificar instalación
-      node --version
-      npm --version
+      curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
+      apt-get install -y nodejs
