--- a/Markdown2Video/.ebextensions/01_install_node.config
+++ b/Markdown2Video/.ebextensions/01_install_node.config
@@ -1,15 +1,11 @@
 # .ebextensions/install_node.config
 commands:
-  01_composer_autoload:
-    command: "composer dump-autoload --optimize"
-    ignoreErrors: true
+  install_node:
+    command: |
+      # 1. Instalar Node.js 18.x desde NodeSource
+      curl -fsSL https://rpm.nodesource.com/setup_18.x | sudo bash -
+      sudo yum install -y nodejs
 
-  02_npm_clean_install:
-    command: "npm ci --production"
-    
-  03_npm_rebuild:
-    command: "npm rebuild"
-    
-  04_npm_build:
-    command: "npm run build"
-    test: "[ -f package.json ] && grep -q '\"build\"' package.json"
+      # 2. Verificar instalación
+      node --version
+      npm --version
