--- a/.github/workflows/release_version.yml
+++ b/.github/workflows/release_version.yml
@@ -7,7 +7,7 @@ env:
 on:
   push:
     branches:
-      - main  # Puedes configurar para que solo se ejecute al hacer push a la rama principal (o la que prefieras)
+      - main  # Puedes onfigurar para que solo se ejecute al hacer push a la rama principal (o la que prefieras)
   workflow_dispatch:
     
 jobs:
