--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: mutation-report
-          path: Markdown2Video/infection-report/
+          path: infection-report
 
   deploy-ghpages:
     needs: infection
