--- a/.github/workflows/bdd-tests.yml
+++ b/.github/workflows/bdd-tests.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Paso 1: Checkout del código
+      # Paso 1: Checkout del código principal
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -23,6 +23,7 @@ jobs:
 
       # Paso 3: Instalar dependencias
       - name: Install dependencies
+        working-directory: Markdown2Video
         run: |
           composer install --prefer-dist --no-progress --no-suggest
           composer require --dev behat/behat
@@ -30,7 +31,7 @@ jobs:
       # Paso 4: Ejecutar pruebas BDD
       - name: Run Behat tests
         run: |
-          vendor/bin/behat --format=pretty --format=junit --out=reports/junit --format=html --out=reports/html
+          Markdown2Video/vendor/bin/behat --format=pretty --format=junit --out=reports/junit --format=html --out=reports/html
 
       # Paso 5: Guardar reportes como artefacto
       - name: Upload test reports artifact
@@ -39,24 +40,21 @@ jobs:
           name: bdd-reports
           path: reports
 
-      # Paso 6: Configurar para deploy a gh-pages
-      - name: Setup GitHub Pages
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-          path: gh-pages
-
-      # Paso 7: Publicar reportes en gh-pages
-      - name: Publish BDD Reports
+      # Paso 6: Publicar en gh-pages (solo si es main o develop)
+      - name: Publish BDD Reports to GitHub Pages
         if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
         run: |
+          git clone --depth 1 --branch gh-pages https://github.com/${{ github.repository }} gh-pages
           mkdir -p gh-pages/bdd
           cp -R reports/html/* gh-pages/bdd/
-          
+
           cd gh-pages
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
-          git commit -m "Update BDD reports - $(date)"
-          git push origin gh-pages
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update BDD reports - $(date)"
+            git push origin gh-pages
+          fi
